objects/ConnectedAppCredentialsSandbox__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CallbackUrl__c</fullName>
        <label>CallbackUrl</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ConnectedAppCredentialsSandbox</label>
</CustomObject>